agregue animaciones al index

--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 <body class="container">
     <nav class="navbar">
         <div class="logo">
+            <a href="./index.html">
             <img src="./assets/images/Logo.png" alt="logo">
+            </a>
         </div>
         <ul>
             <li><a href="./index.html">Inicio</a></li>
@@ -37,12 +39,12 @@
             </a>
         </div>
         <div class="trabajos">
-            <img src="./assets/images/foto1.jpg" class="imgTrabajo" alt="foto1"> 
-            <img src="./assets/images/foto3.jpg" class="imgTrabajo" alt="foto2">
-            <img src="./assets/images/foto2.jpg" class="imgTrabajo" alt="foto3">
-            <img src="./assets/images/foto4.jpg" class="imgTrabajo" alt="foto4"> 
-            <img src="./assets/images/foto5.jpg" class="imgTrabajo" alt="foto5">
-            <img src="./assets/images/foto6.jpg" class="imgTrabajo" alt="foto6">
+            <img src="./assets/images/foto1.jpg" data-aos="fade-right" class="imgTrabajo" alt="foto1"> 
+            <img src="./assets/images/foto3.jpg" data-aos="fade-left" class="imgTrabajo" alt="foto2">
+            <img src="./assets/images/foto2.jpg" data-aos="fade-right" class="imgTrabajo" alt="foto3">
+            <img src="./assets/images/foto4.jpg" data-aos="fade-left" class="imgTrabajo" alt="foto4"> 
+            <img src="./assets/images/foto5.jpg" data-aos="fade-right" class="imgTrabajo" alt="foto5">
+            <img src="./assets/images/foto6.jpg" data-aos="fade-left" class="imgTrabajo" alt="foto6">
         </div>
     </main>
     <footer class="footer">
