--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -11,7 +11,9 @@
 <body class="container">
     <nav class="navbar">
         <div class="logo">
+            <a href="../index.html">
             <img src="../assets/images/Logo.png" alt="">
+            </a>
         </div>
         <ul>
             <li><a href="../index.html">Inicio</a></li>
