--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -11,7 +11,9 @@
 <body class="container">
     <nav class="navbar">
         <div class="logo">
-            <img src="../assets/images/Logo.png" alt="">
+            <a href="../index.html">
+                <img src="../assets/images/Logo.png" alt="">
+                </a>
         </div>
         <ul>
             <li><a href="../index.html">Inicio</a></li>
