linkeo de aos full y agregado de animaciones en productos

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </header>
     <main class="main">
         <h3>Trabajos</h3>
-        <div class="redes">
+        <div class="redes" data-aos="fade-up">
             <a href="https://www.instagram.com/buenosairesbambu/" target="_blank">
             <img src="./assets/images/instagramlogo.png" alt="logo instagram">
             </a>
