--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="../assets/images/Logo.png" type="image/x-icon">
     <title>Contacto</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body class="container">
     <nav class="navbar">
@@ -75,5 +76,9 @@
     <footer class="footer">
         <h5>©2022 Buenos Aires Bambú, todos los derechos reservados</h5>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
