--- a/pages/productos.html
+++ b/pages/productos.html
@@ -7,6 +7,8 @@
     <link rel="shortcut icon" href="../assets/images/Logo.png" type="image/x-icon">
     <title>Productos</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body class="container">
     <nav class="navbar">
@@ -28,7 +30,7 @@
     </header>
     <main class="containerMain main">
         <div class="cards">
-            <div class="cardInd">
+            <div class="cardInd" data-aos="fade-up" data-aos-delay="200">
                 <div class="cardImg">
                     <img src="../assets/images/natural.jpg" alt="imgNat">
                 </div>
@@ -41,7 +43,7 @@
                     </div>
                 </div>
             </div>
-            <div class="cardInd">
+            <div class="cardInd" data-aos="fade-up" data-aos-delay="400">
                 <div class="cardImg">
                     <img src="../assets/images/naturalBarnizada.jpg" alt="imgNat">
                 </div>
@@ -54,7 +56,7 @@
                     </div>
                 </div>
                 </div>
-            <div class="cardInd">
+            <div class="cardInd" data-aos="fade-up" data-aos-delay="600">
             <div class="cardImg">
                 <img src="../assets/images/dorada.jpg" alt="imgNat">
             </div>
@@ -72,5 +74,9 @@
     <footer class="footer">
         <h5>©2022 Buenos Aires Bambú, todos los derechos reservados</h5>
     </footer>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+      </script>
 </body>
 </html>
