agregado de animaciones en contacto

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -28,7 +28,7 @@
         <h1>Contacto</h1>
     </header>
     <main class="main">
-        <form action="contactos.php" class="formContacto">
+        <form action="contactos.php" class="formContacto"  data-aos="fade-up" data-aos-delay="100">
             <fieldset class="formCampoContacto">
                 <legend class="formTitulo">Ingrese sus datos para ser contactado</legend>
                 <div class="inputsContacto">
