--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -33,11 +33,11 @@
             <h3>Dirección</h3>
             <p>Lucía Rueda 3180, B1742JHN Paso del Rey, Provincia de Buenos Aires</p>
             </div>
-            <div class="fotoReferencia">
+            <div class="fotoReferencia"  data-aos="fade-up" data-aos-delay="100">
                 <img src="../assets/images/OutsideTaller.JPG" alt="fotoReference">
             </div>
             <h3>Maps:</h3>
-            <div class="mapa">
+            <div class="mapa" data-aos="fade-up" data-aos-delay="100">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.2976694474005!2d-58.74605428255615!3d-34.64718469999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc9537142281b7%3A0x4c4f73f88e24d1ed!2sBuenos%20Aires%20Bamnbu!5e0!3m2!1ses-419!2sar!4v1653894956024!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
         </div>
