--- a/index.html
+++ b/index.html
@@ -6,24 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/images/Logo.png" type="image/x-icon">
     <title>Inicio</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<body class="container">
-    <nav class="navbar">
-        <div class="logo">
-            <a href="./index.html">
-            <img src="./assets/images/Logo.png" alt="logo">
-            </a>
+<body>
+    <nav class="navbar navbar-expand-lg sticky-top bg-gradient">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+                <img src="./assets/images/Logo.png" alt="logo" width="30" height="30">
+          </a>
+          <a class="navbar-brand" href="#">Buenos Aires Bambú</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+              <a class="nav-link" href="./pages/productos.html">Productos</a>
+              <a class="nav-link" href="./pages/contacto.html">Contacto</a>
+              <a class="nav-link" href="./pages/ubicacion.html">Ubicación</a>
+              <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+            </div>
+          </div>
         </div>
-        <ul>
-            <li><a href="./index.html">Inicio</a></li>
-            <li><a href="./pages/productos.html">Productos</a></li>
-            <li><a href="./pages/contacto.html">Contacto</a></li>
-            <li><a href="./pages/nosotros.html">Nosotros</a></li>
-            <li><a href="./pages/ubicacion.html">Ubicación</a></li>
-        </ul>
-    </nav>
+      </nav>
     <header class="header">
         <h1>Buenos Aires Bambú</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, ullam.</p>
@@ -47,13 +54,23 @@
             <img src="./assets/images/foto6.jpg" data-aos="fade-left" class="imgTrabajo" alt="foto6">
         </div>
     </main>
-    <footer class="footer">
-        <h5>©2022 Buenos Aires Bambú, todos los derechos reservados</h5>
-    </footer>
+    <footer class="text-center text-lg-start" style="background-color: rgb(44, 150, 118);">
+        <div class="container d-flex justify-content-center py-2 redes">
+            <a href="https://www.instagram.com/buenosairesbambu/" target="_blank">
+                <img src="./assets/images/instagramlogo.png" alt="logo instagram">
+                </a>
+                 <a href="https://www.facebook.com/BuenosAiresBambu" target="_blank">
+                <img src="./assets/images/facebooklogo.png" alt="logo facebook">
+                </a>
+        </div>
+        <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+          © 2022 Buenos Aires Bambu
+      </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js">
     </script>
     <script>
         AOS.init();
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
