--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,52 +7,53 @@
     <link rel="shortcut icon" href="../assets/images/Logo.png" type="image/x-icon">
     <title>Nosotros</title>
     <link rel="stylesheet" href="../assets/css/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
-<body class="container">
-    <nav class="navbar">
-        <div class="logo">
-            <a href="../index.html">
-                <img src="../assets/images/Logo.png" alt="">
-                </a>
+<body>
+    <nav class="navbar navbar-expand-lg sticky-top bg-gradient">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+                <img src="../assets/images/Logo.png" alt="logo" width="30" height="30">
+          </a>
+          <a class="navbar-brand" href="#">Buenos Aires Bambú</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+              <a class="nav-link" href="./productos.html">Productos</a>
+              <a class="nav-link" href="./contacto.html">Contacto</a>
+              <a class="nav-link" href="./ubicacion.html">Ubicación</a>
+              <a class="nav-link active" href="./nosotros.html">Nosotros</a>
+            </div>
+          </div>
         </div>
-        <ul>
-            <li><a href="../index.html">Inicio</a></li>
-            <li><a href="./productos.html">Productos</a></li>
-            <li><a href="./contacto.html">Contacto</a></li>
-            <li><a href="./nosotros.html">Nosotros</a></li>
-            <li><a href="./ubicacion.html">Ubicación</a></li>
-        </ul>
-    </nav>
+      </nav>
     <header class="header">
         <h1>Nosotros</h1>
     </header>
     <main class="contenedorDePersonas main">
-        <div class="personas">
-            <div class="persona"  data-aos="fade-up" data-aos-delay="200">
-                <div class="personaImg">
-                    <img src="../assets/images/retrato1.jpg" alt="retrato1">
+        <div class="container-fluid row flex-wrap justify-content-center">
+              <div class="card personaImg m-3" style="width: 18rem;">
+                <img src="../assets/images/retrato1.jpg" class="card-img-top" alt="retrato1">
+                <div class="card-body personaInfo">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
-                <div class="personaInfo">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloremque excepturi quisquam totam sint architecto, voluptatibus alias laborum. Id, voluptas.</p>
+              </div>
+              <div class="card personaImg m-3" style="width: 18rem;">
+                <img src="../assets/images/retrato2.jpg" class="card-img-top" alt="retrato2">
+                <div class="card-body personaInfo">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
+              </div>
+              <div class="card personaImg m-3" style="width: 18rem;">
+                <img src="../assets/images/retrato3.jpg" class="card-img-top" alt="retrato3">
+                <div class="card-body personaInfo">
+                  <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
-            <div class="persona"  data-aos="fade-up" data-aos-delay="400">
-                <div class="personaImg">
-                    <img src="../assets/images/retrato2.jpg" alt="retrato2">
-                </div>
-                <div class="personaInfo">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloremque excepturi quisquam totam sint architecto, voluptatibus alias laborum. Id, voluptas.</p>
-                </div>
-            </div>
-            <div class="persona"  data-aos="fade-up" data-aos-delay="600">
-                <div class="personaImg">
-                    <img src="../assets/images/retrato3.jpg" alt="retrato3">
-                </div>
-                <div class="personaInfo">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam doloremque excepturi quisquam totam sint architecto, voluptatibus alias laborum. Id, voluptas.</p>
-                </div>
-            </div>
+              </div>
         </div>
        <h3>Videos</h3>
        <!-- El video no me pertenece -->
@@ -64,12 +65,22 @@
     </div>
     
     </main>
-    <footer class="footer">
-        <h5>©2022 Buenos Aires Bambú, todos los derechos reservados</h5>
-    </footer>
+    <footer class="text-center text-lg-start" style="background-color: rgb(44, 150, 118);">
+        <div class="container d-flex justify-content-center py-2 redes">
+            <a href="https://www.instagram.com/buenosairesbambu/" target="_blank">
+                <img src="../assets/images/instagramlogo.png" alt="logo instagram">
+                </a>
+                 <a href="https://www.facebook.com/BuenosAiresBambu" target="_blank">
+                <img src="../assets/images/facebooklogo.png" alt="logo facebook">
+                </a>
+        </div>
+        <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+          © 2022 Buenos Aires Bambu
+      </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         AOS.init();
       </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
