Pase el CSS a SASS

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -45,7 +45,7 @@
                         <input type="text" name="email" id="email" placeholder="Su correo electrónico" required>
                     </div>
                     <div>
-                        <h>Indique su sexo:</h>
+                        <h5>Indique su sexo:</h5>
                         <label for="sexo">Hombre</label>
                         <input type="radio" name="sexo" id="h">
                         <label for="sexo">Mujer</label>
@@ -54,7 +54,7 @@
                         <input type="radio" name="sexo" id="nb">
                     </div>
                     <div>
-                        <h>¿De dónde eres?</h>
+                        <h5>¿De dónde eres?</h5>
                         <select name="direccionCliente" id="dCliente" required class="margin10">
                             <option value=""></option>
                             <option value="caba">Capital Federal</option>
@@ -64,11 +64,11 @@
                         </select>
                     </div>
                     <div>
-                        <h>Déjenos un comentario (opcional)</h>
+                        <h5>Déjenos un comentario (opcional)</h5>
                         <br>
                         <textarea name="" id="" cols="30" rows="10"></textarea>
                         <br>
-                        <h>Acepta términos y condiciones</h>
+                        <h5>Acepta términos y condiciones</h5>
                         <input type="checkbox" name="acepto" value="Si" required>
                     </div>
                     <div class="inputsBotones">
