--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg sticky-top bg-gradient">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="./index.html">
                 <img src="./assets/images/Logo.png" alt="logo" width="30" height="30">
           </a>
           <a class="navbar-brand" href="#">Buenos Aires Bambú</a>
@@ -33,10 +33,11 @@
       </nav>
     <header class="header">
         <h1>Buenos Aires Bambú</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, ullam.</p>
+        <p>Trabajando por tu jardín desde hace 20 años</p>
     </header>
     <main class="main">
         <h3>Trabajos</h3>
+        <!--  "Elimino provisionalmente las redes al principio para ver como queda"
         <div class="redes" data-aos="fade-up">
             <a href="https://www.instagram.com/buenosairesbambu/" target="_blank">
             <img src="./assets/images/instagramlogo.png" alt="logo instagram">
@@ -45,6 +46,7 @@
             <img src="./assets/images/facebooklogo.png" alt="logo facebook">
             </a>
         </div>
+        -->
         <div class="trabajos">
             <img src="./assets/images/foto1.jpg" data-aos="fade-right" class="imgTrabajo" alt="foto1"> 
             <img src="./assets/images/foto3.jpg" data-aos="fade-left" class="imgTrabajo" alt="foto2">
@@ -55,12 +57,12 @@
         </div>
     </main>
     <footer class="text-center text-lg-start" style="background-color: rgb(44, 150, 118);">
-        <div class="container d-flex justify-content-center py-2 redes">
+        <div class="container-fluid d-flex justify-content-center py-2 redes">
             <a href="https://www.instagram.com/buenosairesbambu/" target="_blank">
-                <img src="./assets/images/instagramlogo.png" alt="logo instagram">
+                <img src="./assets/images/instagramlogo.png" class="logoRed" alt="logo instagram">
                 </a>
                  <a href="https://www.facebook.com/BuenosAiresBambu" target="_blank">
-                <img src="./assets/images/facebooklogo.png" alt="logo facebook">
+                <img src="./assets/images/facebooklogo.png" class="logoRed" alt="logo facebook">
                 </a>
         </div>
         <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
