--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg sticky-top bg-gradient">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="../index.html">
                 <img src="../assets/images/Logo.png" alt="logo" width="30" height="30">
           </a>
           <a class="navbar-brand" href="#">Buenos Aires Bambú</a>
@@ -35,21 +35,21 @@
         <h1>Nosotros</h1>
     </header>
     <main class="contenedorDePersonas main">
-        <div class="container-fluid row flex-wrap justify-content-center">
-              <div class="card personaImg m-3" style="width: 18rem;">
-                <img src="../assets/images/retrato1.jpg" class="card-img-top" alt="retrato1">
+        <div class="container-fluid row flex-wrap justify-content-center personas">
+              <div class="card personaImg m-3 border-success" style="width: 18rem;">
+                <img src="../assets/images/retrato1.jpg" class="card-img-top border border-success border-3 my-2 rounded-0" alt="retrato1">
                 <div class="card-body personaInfo">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
-              <div class="card personaImg m-3" style="width: 18rem;">
-                <img src="../assets/images/retrato2.jpg" class="card-img-top" alt="retrato2">
+              <div class="card personaImg m-3 border-success" style="width: 18rem;">
+                <img src="../assets/images/retrato1.jpg" class="card-img-top border border-success border-3 my-2 rounded-0" alt="retrato2">
                 <div class="card-body personaInfo">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
               </div>
-              <div class="card personaImg m-3" style="width: 18rem;">
-                <img src="../assets/images/retrato3.jpg" class="card-img-top" alt="retrato3">
+              <div class="card personaImg m-3 border-success" style="width: 18rem;">
+                <img src="../assets/images/retrato1.jpg" class="card-img-top border border-success border-3 my-2 rounded-0" alt="retrato3">
                 <div class="card-body personaInfo">
                   <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 </div>
@@ -68,11 +68,11 @@
     <footer class="text-center text-lg-start" style="background-color: rgb(44, 150, 118);">
         <div class="container d-flex justify-content-center py-2 redes">
             <a href="https://www.instagram.com/buenosairesbambu/" target="_blank">
-                <img src="../assets/images/instagramlogo.png" alt="logo instagram">
-                </a>
-                 <a href="https://www.facebook.com/BuenosAiresBambu" target="_blank">
-                <img src="../assets/images/facebooklogo.png" alt="logo facebook">
-                </a>
+              <img src="../assets/images/instagramlogo.png" class="logoRed" alt="logo instagram">
+            </a>
+             <a href="https://www.facebook.com/BuenosAiresBambu" target="_blank">
+            <img src="../assets/images/facebooklogo.png" class="logoRed" alt="logo facebook">
+            </a>
         </div>
         <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
           © 2022 Buenos Aires Bambu
