--- a/pages/productos.html
+++ b/pages/productos.html
@@ -13,7 +13,7 @@
 <body>
     <nav class="navbar navbar-expand-lg sticky-top bg-gradient">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">
+          <a class="navbar-brand" href="../index.html">
                 <img src="../assets/images/Logo.png" alt="logo" width="30" height="30">
           </a>
           <a class="navbar-brand" href="#">Buenos Aires Bambú</a>
@@ -45,7 +45,7 @@
                     <div class="cardInputs">
                         <input type="text" name="ancho" id="ancho" placeholder="Coloque el ancho">
                         <input type="text" name="altura" id="altura" placeholder="Coloque la altura">
-                        <input type="button" value="Calcular precio">
+                        <input type="button" class="btn-botonNaturales" value="Calcular precio">
                     </div>
                 </div>
             </div>
@@ -58,7 +58,7 @@
                     <div class="cardInputs">
                     <input type="text" name="ancho" id="ancho" placeholder="Coloque el ancho">
                     <input type="text" name="altura" id="altura" placeholder="Coloque la altura">
-                    <input type="button" value="Calcular precio">
+                    <input type="button" class="btn-botonBarnizadas" value="Calcular precio">
                     </div>
                 </div>
                 </div>
@@ -71,7 +71,7 @@
                 <div class="cardInputs">
                     <input type="text" name="ancho" id="ancho" placeholder="Coloque el ancho">
                     <input type="text" name="altura" id="altura" placeholder="Coloque la altura">
-                    <input type="button" value="Calcular precio">
+                    <input type="button" class="btn-botonDoradas" value="Calcular precio">
                 </div>
             </div>
             </div>
@@ -80,10 +80,10 @@
     <footer class="text-center text-lg-start" style="background-color: rgb(44, 150, 118);">
         <div class="container d-flex justify-content-center py-2 redes">
             <a href="https://www.instagram.com/buenosairesbambu/" target="_blank">
-                <img src="../assets/images/instagramlogo.png" alt="logo instagram">
+                <img src="../assets/images/instagramlogo.png" class="logoRed" alt="logo instagram">
                 </a>
                  <a href="https://www.facebook.com/BuenosAiresBambu" target="_blank">
-                <img src="../assets/images/facebooklogo.png" alt="logo facebook">
+                <img src="../assets/images/facebooklogo.png" class="logoRed" alt="logo facebook">
                 </a>
         </div>
         <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
