--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <title>Buenos Aires Bambú</title>
+    <meta name="keywords" content="CERCOS, PANELES, BAMBÚ, BUENOS AIRES, CAÑAS DE BAMBÚ">
+    <meta name ="description" content="Cañas de bambú tacuara naturales, barnizadas, doradas. Instalaciones en Buenos Aires.">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
