--- a/index.html
+++ b/index.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Buenos Aires Bambú</title>
+    <title>Buenos Aires Bambú Inicio</title>
     <meta name="keywords" content="CERCOS, PANELES, BAMBÚ, BUENOS AIRES, CAÑAS DE BAMBÚ">
     <meta name ="description" content="Cañas de bambú tacuara naturales, barnizadas, doradas. Instalaciones en Buenos Aires.">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./assets/images/Logo.png" type="image/x-icon">
-    <title>Inicio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
