--- a/pages/productos.html
+++ b/pages/productos.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Buenos Aires Bambú</title>
+    <title>Buenos Aires Bambú Productos</title>
     <meta name="keywords" content="CERCOS, PANELES, BAMBÚ, BUENOS AIRES, CAÑAS DE BAMBÚ">
     <meta name ="description" content="Cañas de bambú tacuara naturales, barnizadas, doradas. Instalaciones en Buenos Aires.">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/images/Logo.png" type="image/x-icon">
-    <title>Productos</title>
-    <link rel="stylesheet" href="../assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
@@ -38,12 +37,13 @@
         <h1>Productos</h1>
     </header>
     <main class="containerMain main">
-        <div class="cards">
+        <div class="cards d-flex flex-column">
             <div class="cardInd" data-aos="fade-up" data-aos-delay="200">
                 <div class="cardImg">
                     <img src="../assets/images/natural.jpg" alt="imgNat">
                 </div>
                 <div class="cardInfo">
+                    <p class="text-decoration-underline fs-3">Panel de cañas Naturales</p>
                     <p>Precio del metro cuadrado: $</p>
                     <div class="cardInputs">
                         <input type="text" name="ancho" id="ancho" placeholder="Coloque el ancho">
@@ -57,6 +57,7 @@
                     <img src="../assets/images/naturalBarnizada.jpg" alt="imgNat">
                 </div>
                 <div class="cardInfo">
+                    <p class="text-decoration-underline fs-3">Panel de cañas Barnizadas</p>
                     <p>Precio del metro cuadrado: $</p>
                     <div class="cardInputs">
                     <input type="text" name="ancho" id="ancho" placeholder="Coloque el ancho">
@@ -70,6 +71,7 @@
                 <img src="../assets/images/dorada.jpg" alt="imgNat">
             </div>
             <div class="cardInfo">
+                <p class="text-decoration-underline fs-3">Panel de cañas Doradas</p>
                 <p>Precio del metro cuadrado: $</p>
                 <div class="cardInputs">
                     <input type="text" name="ancho" id="ancho" placeholder="Coloque el ancho">
@@ -80,7 +82,7 @@
             </div>
         </div>
     </main>
-    <footer class="text-center text-lg-start" style="background-color: rgb(44, 150, 118);">
+    <footer class="text-center text-lg-start footerProductos" style="background-color: rgb(44, 150, 118);">
         <div class="container d-flex justify-content-center py-2 redes">
             <a href="https://www.instagram.com/buenosairesbambu/" target="_blank">
                 <img src="../assets/images/instagramlogo.png" class="logoRed" alt="logo instagram">
