--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -8,8 +8,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="../assets/images/Logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="../assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <body>
@@ -37,7 +37,7 @@
         <h1>Nosotros</h1>
     </header>
     <main class="contenedorDePersonas main">
-        <div class="container-fluid row flex-wrap justify-content-center personas">
+        <div class="container-fluid row flex-wrap justify-content-center align-items-center personas">
               <div class="card personaImg m-3 border-success" style="width: 18rem;">
                 <img src="../assets/images/retrato1.jpg" class="card-img-top border border-success border-3 my-2 rounded-0" alt="retrato1">
                 <div class="card-body personaInfo">
