--- a/index.html
+++ b/index.html
@@ -34,21 +34,16 @@
         </div>
       </nav>
     <header class="header">
-        <h1>Buenos Aires Bambú</h1>
-        <p>Trabajando por tu jardín desde hace 20 años</p>
+      <div class="container-fluid">
+        <div class="row banner">
+            <div class="col-12 contenidoBanner d-flex flex-column text-center justify-content-center">
+                <h1 class="text-white textoPortada textoBanner">Buenos Aires Bambú</h1>
+                <h2 class="text-white textoPortada textoBanner fs-2">Trabajando por tu jardín desde hace 20 años</h2>
+            </div>
+        </div>
+      </div>
     </header>
     <main class="main">
-        <h3>Trabajos</h3>
-        <!--  "Elimino provisionalmente las redes al principio para ver como queda"
-        <div class="redes" data-aos="fade-up">
-            <a href="https://www.instagram.com/buenosairesbambu/" target="_blank">
-            <img src="./assets/images/instagramlogo.png" alt="logo instagram">
-            </a>
-             <a href="https://www.facebook.com/BuenosAiresBambu" target="_blank">
-            <img src="./assets/images/facebooklogo.png" alt="logo facebook">
-            </a>
-        </div>
-        -->
         <div class="trabajos">
             <img src="./assets/images/foto1.jpg" data-aos="fade-right" class="imgTrabajo" alt="foto1"> 
             <img src="./assets/images/foto3.jpg" data-aos="fade-left" class="imgTrabajo" alt="foto2">
