--- a/pages/ubicacion.html
+++ b/pages/ubicacion.html
@@ -34,22 +34,29 @@
         </div>
       </nav>
     <header class="header">
-        <h1>Ubicación</h1>
-    </header>
-    <main class="main">
-        <div class="ubicacion">
-            <div class="ubiInfo">
-            <h3>Dirección</h3>
-            <p>Lucía Rueda 3180, B1742JHN Paso del Rey, Provincia de Buenos Aires</p>
-            </div>
-            <div class="fotoReferencia"  data-aos="fade-up" data-aos-delay="100">
-                <img src="../assets/images/OutsideTaller.JPG" alt="fotoReference">
-            </div>
-            <h3>Maps:</h3>
-            <div class="mapa" data-aos="fade-up" data-aos-delay="100">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.2976694474005!2d-58.74605428255615!3d-34.64718469999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc9537142281b7%3A0x4c4f73f88e24d1ed!2sBuenos%20Aires%20Bamnbu!5e0!3m2!1ses-419!2sar!4v1653894956024!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      <div class="container-fluid">
+        <div class="row banner">
+            <div class="col-12 contenidoBanner d-flex flex-column text-center justify-content-center">
+                <h1 class="text-white textoPortada textoBanner">Buenos Aires Bambú</h1>
+                <h2 class="text-white textoPortada textoBanner fs-2">Ubicación</h2>
             </div>
         </div>
+      </div>
+    </header>
+    <main class="main">
+      <div class="mb-5 container-xl p-3 d-md-flex">
+        <div class="ubiInfo col-md-6">
+          <h3>Dirección</h3>
+          <p>Lucía Rueda 3180, B1742JHN Paso del Rey, Provincia de Buenos Aires</p>
+          <div class="fotoReferencia aos-init aos-animate" data-aos="fade-up" data-aos-delay="100">
+            <img src="../assets/images/OutsideTaller.JPG" alt="fotoReference">
+          </div>
+        </div>
+          
+         <div class="d-flex justify-content-center col-md-6 mapa">
+        <iframe class=" col-12 col-sm-10" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3282.2976694474005!2d-58.74605428255615!3d-34.64718469999999!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bc9537142281b7%3A0x4c4f73f88e24d1ed!2sBuenos%20Aires%20Bamnbu!5e0!3m2!1ses-419!2sar!4v1653894956024!5m2!1ses-419!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </div>
+      </div>
     </main>
     <footer class="text-center text-lg-start" style="background-color: rgb(44, 150, 118);">
         <div class="container d-flex justify-content-center py-2 redes">
