Arregladas jerarquias H y hovers de botones en productos

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -48,21 +48,21 @@
               <div class="card personaImg border-success text-center m-3" data-aos="fade-up" data-aos-delay="400" style="width: 18rem;">
                 <img src="../assets/images/retrato1.jpg" class="card-img-top border border-success border-3 mt-2 rounded-0" alt="retrato1">
                 <div class="card-body personaInfo">
-                  <h5 class="card-title">Ignacio Rearte</h5>
+                  <p class="card-title">Ignacio Rearte</p>
                   <p class="card-text">Dirige el emprendimiento desde sus inicios, es el fundador padre.</p>
                 </div>
               </div>
               <div class="card personaImg border-success text-center m-3" data-aos="fade-up" data-aos-delay="400" style="width: 18rem;">
                 <img src="../assets/images/retrato2.jpg" class="card-img-top border border-success border-3 mt-2 rounded-0" alt="retrato2">
                 <div class="card-body personaInfo">
-                  <h5 class="card-title">Leandro Alem</h5>
+                  <p class="card-title">Leandro Alem</p>
                   <p class="card-text">Se encarga del manejo de redes sociales y concretar ventas. Lleva aquí desde los inicios.</p>
                 </div>
               </div>
               <div class="card personaImg border-success text-center m-3" data-aos="fade-up" data-aos-delay="400" style="width: 18rem;">
                 <img src="../assets/images/retrato3.jpg" class="card-img-top border border-success border-3 mt-2 rounded-0" alt="retrato3">
                 <div class="card-body personaInfo">
-                  <h5 class="card-title">Lautaro Ortolani</h5>
+                  <p class="card-title">Lautaro Ortolani</p>
                   <p class="card-text">Experto en limpieza y mantenimiento del establecimiento.</p>
                 </div>
               </div>
