--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -122,9 +122,8 @@
                     </form>
         
                     <div class="text-center text-md-left">
-                        <a class="btn btn-primary bg-success border-white" onclick="document.getElementById('contact-form').submit();">Send</a>
+                        <a class="btn btn-primary bg-success border-white" onclick="document.getElementById('contact-form').submit();">Enviar</a>
                     </div>
-                    <div class="status"></div>
                 </div>
                 <!--Grid column-->
         
