--- a/pages/productos.html
+++ b/pages/productos.html
@@ -44,51 +44,51 @@
           </div>
     </header>
     <main class="main row justify-content-center mb-4 mx-5 overflow-hidden">
-        <div class="card mb-3 col-12 col-md-4 m-5" data-aos="fade-up" data-aos-delay="400" style="max-width: 540px;">
+        <div class="card mb-3 col-12 col-md-4 m-5 producto" data-aos="fade-up" data-aos-delay="400" style="max-width: 540px;">
             <div class="row g-0">
               <div class="col-md-4 text-center">
                 <img src="../assets/images/natural.jpg" class="img-fluid rounded-start" alt="...">
-                <button type="button" class="btn my-2 btn-botonNaturales">
+                <button type="button" class="btn my-2 btn-botonNaturales botonHov">
                     <span>Comprar</span>
                 </button>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Panel de cañas naturales</h5>
+                  <h3 class="card-title">Panel de cañas naturales</h3>
                   <p class="card-text">Cañas de tacuara seleccionadas traídas directamente de Misiones y lavadas artesanalmente.</p>
                   <p class="card-text"><small class="text-muted">Stock disponible</small></p>
                 </div>
               </div>
             </div>
           </div>
-          <div class="card mb-3 col-12 col-md-4 m-5" data-aos="fade-up" data-aos-delay="400" style="max-width: 540px;">
+          <div class="card mb-3 col-12 col-md-4 m-5 producto" data-aos="fade-up" data-aos-delay="400" style="max-width: 540px;">
             <div class="row g-0">
               <div class="col-md-4 text-center">
                 <img src="../assets/images/naturalBarnizada.jpg" class="img-fluid rounded-start" alt="...">
-                <button type="button" class="btn my-2 btn-botonNaturales">
+                <button type="button" class="btn my-2 btn-botonNaturales botonHov">
                     <span>Comprar</span>
                 </button>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Panel de cañas barnizadas</h5>
+                  <h3 class="card-title">Panel de cañas barnizadas</h3>
                   <p class="card-text">Cañas de tacuara seleccionadas traídas directamente de Misiones barnizadas y lavadas artesanalmente.</p>
                   <p class="card-text"><small class="text-muted">Stock disponible</small></p>
                 </div>
               </div>
             </div>
           </div> 
-          <div class="card mb-3 col-12 col-md-4 m-5" data-aos="fade-up" data-aos-delay="400" style="max-width: 540px;">
+          <div class="card mb-3 col-12 col-md-4 m-5 producto" data-aos="fade-up" data-aos-delay="400" style="max-width: 540px;">
             <div class="row g-0">
               <div class="col-md-4 text-center">
                 <img src="../assets/images/dorada.jpg" class="img-fluid rounded-start" alt="imgDoradas">
-                <button type="button" class="btn my-2 btn-botonNaturales">
+                <button type="button" class="btn my-2 btn-botonNaturales botonHov">
                     <span>Comprar</span>
                 </button>
               </div>
               <div class="col-md-8">
                 <div class="card-body">
-                  <h5 class="card-title">Panel de cañas doradas</h5>
+                  <h3 class="card-title">Panel de cañas doradas</h3>
                   <p class="card-text">Cañas de tacuara seleccionadas traídas directamente de Misiones flameadas, barnizadas y lavadas artesanalmente.</p>
                   <p class="card-text"><small class="text-muted">Stock disponible</small></p>
                 </div>
